2017-11-20  Theppitak Karoonboonyanan <theppitak@gmail.com>

	Simplify loop in MaxWordSeg::WordSegArea().

	* src/maxwordseg.cpp (MaxWordSeg::WordSegArea()):
	  - Rearrange loop for more readability.
	  - With this, foundUnk flag is eliminated.

2017-11-17  Theppitak Karoonboonyanan <theppitak@gmail.com>

	Adjust MaxWordSeg::CreateSentence().

	* src/maxwordseg.cpp (MaxWordSeg::CreateSentence()):
	  - Assign stWord = i + 1 after unknown zone, to resemble
	    the case of in-dict word (where stWord is assigned 1, not 0).
	    Then, the later for-loop on stWord won't need to check and
	    increment stWord the first time, as we already know
	    LinkSep[IdxSep[stWord]] == enAmb, and the if-condition
	    within the for-loop will always fail in the first round.
	  - Drop unnecessary (stWord < textLen) check, as enAmb is assumed
	    to never exceed textLen, and thus (stWord < enAmb) should
	    alreader imply (stWord < textLen).
	  - Merge the (IdxSep[stWord] < 0) check into next if-condition.

2017-11-16  Theppitak Karoonboonyanan <theppitak@gmail.com>

	Make LongWordSeg try other paths than just the first.

	* src/longwordseg.cpp (LongWordSeg::CreateSentence()):
	  - Wrap the text iteration loop with backtrack loop,
	    employing the BackTrackStack.
	  - Keep track of unknown word count.
	  - Return immediately if text end is reached with zero unknown.
	  - Otherwise, try to find the best sentence with least unknowns.

2017-11-15  Theppitak Karoonboonyanan <theppitak@gmail.com>

	Simplify LongWordSeg::CreateSentence().

	* src/longwordseg.cpp (LongWordSeg::CreateSentence()):
	  - Use intermediate WordState instantiation and get rid of
	    wState var.
	  - Move common SepData[senIdx].Sep[sepIdx] assignments out of
	    the cases of 'if (IdxSep[Idx] >= 0)' block.
	  - Do not check Idx against textLen inside the while-loop,
	    which already checks the same condition.
	  - Move common SepData[senIdx].Sep[sepIdx] terminator assignments