@@ -6,15 +6,6 @@
 #include "longwordseg.h"
 #include <limits.h>
 
-//////////////////////////////////////////////////////////////////////
-// Construction/Destruction
-//////////////////////////////////////////////////////////////////////
-
-LongWordSeg::LongWordSeg ()
-  : AbsWordSeg ()
-{
-}
-
 int
 LongWordSeg::CreateSentence ()
 {
