@@ -1,3 +1,11 @@
+2017-11-21  Theppitak Karoonboonyanan <theppitak@gmail.com>
+
+	Remove empty default c-tors.
+
+	* src/longwordseg.h, src/longwordseg.cpp:
+	* src/maxwordseg.h, src/maxwordseg.cpp:
+	  - Remove empty default c-tors for LongWordSeg & MaxWordSeg.
+
 2017-11-20  Theppitak Karoonboonyanan <theppitak@gmail.com>
 
 	Simplify loop in MaxWordSeg::WordSegArea().
